updated the whole dataset access

--- a/contributor_folders/team_member_2/SWOTL3_dataprep.ipynb
+++ b/contributor_folders/team_member_2/SWOTL3_dataprep.ipynb
@@ -532,7 +532,21 @@
    "id": "f2cc1443-f9fd-4173-9b61-02c097a52fef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def preprocess(ds):\n",
+    "  ds = ds.set_coords('time')\n",
+    "  ds = ds.swap_dims({'num_lines':'time'})\n",
+    "  ds = ds.drop_dims('num_nadir')\n",
+    "  return ds\n",
+    "\n",
+    "swot_full = xr.open_mfdataset(data_files, \n",
+    "                         preprocess=preprocess, \n",
+    "                         combine='nested',\n",
+    "                         concat_dim='time')\n",
+    "\n",
+    "\n",
+    "### can't drop the nadir dimension, only empty in the last file, which shouldn't be used"
+   ]
   }
  ],
  "metadata": {
