--- a/contributor_folders/team_member_1/GLORYS_DataPrep.ipynb
+++ b/contributor_folders/team_member_1/GLORYS_DataPrep.ipynb
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "270c36b8-d83c-4479-bff5-1e1b9a5f9ab0",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1616,7 @@
    "source": [
     "# Create the plot\n",
     "plt.figure(figsize=(12, 8))  # Set the figure size for better readability\n",
-    "plot = dat_aviso.adt.sel(time=\"2021-01-01T00:00:00.000000000\").plot(\n",
+    "plot = dat_aviso.adt.sel(time=\"2021-01-01\").plot(\n",
     "    cmap='jet',               \n",
     "    vmin=-.5,                  \n",
     "    vmax=1)"
@@ -3264,7 +3264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "id": "872a007e-e98e-4969-86a6-01a187404c11",
    "metadata": {},
    "outputs": [
@@ -3274,7 +3274,7 @@
        "(-39.875, -36.125)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3294,13 +3294,13 @@
     "gs = GridSpec(1, 2, width_ratios=[1, 1], wspace=0.3)  # Define a 1x2 grid with space between subplots\n",
     "\n",
     "ax1 = fig.add_subplot(gs[0])\n",
-    "c1 = dat_glorys_i.zos.sel(time=\"2021-01-01T00:00:00.000000000\").plot(vmin=0,vmax=1, cmap='jet')\n",
+    "c1 = dat_glorys_i.zos.sel(time=\"2021-01-01\").plot(vmin=0,vmax=1, cmap='jet')\n",
     "ax1.set_aspect('equal') \n",
     "plt.xlim(dat_aviso.longitude.min(),dat_aviso.longitude.max())\n",
     "plt.ylim(dat_aviso.latitude.min(),dat_aviso.latitude.max())\n",
     "\n",
     "ax2 = fig.add_subplot(gs[1]) \n",
-    "c2 = dat_dow.zos.sel(time=\"2021-01-01T00:00:00.000000000\").plot(vmin=0,vmax=1, cmap='jet')\n",
+    "c2 = dat_dow.zos.sel(time=\"2021-01-01\").plot(vmin=0,vmax=1, cmap='jet')\n",
     "ax2.set_aspect('equal')  \n",
     "plt.xlim(dat_aviso.longitude.min(),dat_aviso.longitude.max())\n",
     "plt.ylim(dat_aviso.latitude.min(),dat_aviso.latitude.max())\n",
