--- a/contributor_folders/team_member_1/GLORYS_DataPrep.ipynb
+++ b/contributor_folders/team_member_1/GLORYS_DataPrep.ipynb
@@ -13,7 +13,7 @@
     "- **Upload and Plot**: Import Level 3 SWOT satellite data and generate plots.\n",
     "- **Path Selection**: Focus on a specific segment of the SWOT path.\n",
     "\n",
-    "### 2. Integration with Altimetry and Model Data\n",
+    "### 2. Integration with Altimetry and GLORYS model Data\n",
     "- **AVISO Altimetry**: Extract and analyze AVISO altimetry data corresponding to the area of the selected SWOT path.\n",
     "- **GLORYS Model Data**: Access and process GLORYS model data for the same region.\n",
     "\n",
